--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -293,12 +293,14 @@
 
 ## extern
 
+### 1.1 
+
 + C++语言支持**分离式编译机制**：
   - 该机制允许将程序分隔为若干个文件，每个文件可被独立编译。为了将程序分为许多文件，则需要在文件中共享代码，例如一个文件的代码可能需要另一个文件中定义的变量
 + 为了支持分离式编译，C++允许**将声明和定义分离开来**：
   - 变量的声明规定了变量的类型和名字，即使一个名字为程序所知，一个文件如果想使用别处定义的名字则必须包含对那个名字的声明。
   - 定义则负责创建与名字关联的实体，申请存储空间。
-+ 如果向声明一个变量而非定义它，就在变量名前添加`extern`关键字，而且不要显式地初始化变量。`extern int i; // 声明i`。变量可以被声明很多次，但那是只能被定义一次
++ 如果想声明一个变量而非定义它，就在变量名前添加`extern`关键字，而且不要显式地初始化变量。`extern int i; // 声明i`。变量可以被声明很多次，但那是只能被定义一次
 + 在多个文件中共享`const`对象。默认情况下，一个`const`对象仅在本文件内有效，如果多个文件中出现了同名的`const`变量时，其实等同于在不同的文件中分别定义了独立的变量。
 + 某些时候，我们需要只在一个文件中定义`const`变量，而在其他多个文件中声明并使用它。解决方法时：对于`const`变量不管是声明还是定义都添加`extern`关键字。
 + 模板的控制实例化。当两个或者多个独立编译的源文件中使用了相同的模板并且提供了相同的模板参数时，每个文件中都会有该模板的一个实例。
@@ -307,6 +309,27 @@
 + 对于一个给定的的实例化版本，可能有多个`extern`声明，但是必须只有一个定义。
 + 总结：
   - `extern`一般是使用在多个文件之间需要共享某些代码的情况下
+
+### 1.2 `extern` 用法总结
+
++ 在C语言中，修饰符extern用在变量或者函数的声明前，用来说明“此变量/函数是在别处定义的，要在此处引用”。
+
++ extern修饰变量的声明
+  + 如果文件a.c需要引用b.c中变量int v，就可以在a.c中声明extern int v，然后就可以引用变量v。
+  + 这里需要注意的是，被引用的变量v的链接属性必须是外链接（external）的，也就是说a.c要引用到v，不只是取决于在a.c中声明extern int v，还取决于变量v本身是能够被引用到的。
+  + 这涉及到c语言的另外一个话题－－变量的作用域。能够被其他模块以extern修饰符引用到的变量通常是**全局变量**。
+  + 还有很重要的一点是，extern int v可以放在a.c中的任何地方，比如你可以在a.c中的函数fun定义的开头处声明extern int v，然后就可以引用到变量v了，只不过这样只能在函数fun作用域中引用v罢了，这还是变量作用域的问题。对于这一点来说，很多人使用的时候都心存顾虑。好像extern声明只能用于文件作用域似的。
+
++ extern修饰函数声明
+  + 从本质上来讲，变量和函数没有区别。**函数名是指向函数二进制块开头处的指针**
+  + 如果文件a.c需要引用b.c中的函数，比如在b.c中原型是int fun(int mu)，那么就可以在a.c中声明extern int fun（int mu），然后就能使用fun来做任何事情。
+  + 就像变量的声明一样，extern int fun（int mu）可以放在a.c中任何地方，而不一定非要放在a.c的文件作用域的范围中。
+  + 对其他模块中函数的引用，最常用的方法是**包含这些函数声明的头文件**。使用extern和包含头文件来引用函数有什么区别呢？extern的引用方式比包含头文件要简洁得多！extern的使用方法是直接了当的，想引用哪个函数就用extern声明哪个函数。
+  + 这样做的一个明显的好处是，会加速程序的编译（确切的说是预处理）的过程，节省时间。在大型C程序编译过程中，这种差异是非常明显的。
+
++ extern修饰符可用于指示C或者C＋＋函数的调用规范
+  + 比如在C＋＋中调用C库函数，就需要在C＋＋程序中用extern “C”声明要引用的函数。
+  + 这是给链接器用的，告诉链接器在链接的时候用C函数规范来链接。主要原因是C＋＋和C程序编译完成后在目标代码中命名规则不同。
 
 ## NULL 和 nullptr
 
