--- a/Grandhonor/Robot-协作机器人开发/XML解析器/北京-机械臂-解析需求.md
+++ b/Grandhonor/Robot-协作机器人开发/XML解析器/北京-机械臂-解析需求.md
@@ -19,8 +19,8 @@
 + 当前需要解析出来的数据：
   + Joint
     + name(string) -- 关节名字
-    + xyz(double)  -- 空间坐标
-    + rpy(double)  -- 旋转角度
+    + xyz(double)  -- 空间坐标   P  
+    + rpy(double)  -- 旋转角度   R
     + parent link(string) -- 父连杆
     + child link(string)  -- 子连杆
   + Link
@@ -34,3 +34,13 @@
     + iyy(double)  -- 惯性张量矩阵3 * 3
     + iyz(double)  -- 惯性张量矩阵3 * 3
     + izz(double)  -- 惯性张量矩阵3 * 3
+
+### 2023.02.24
+
++ 需求：
+  + 输入Joint的名字和Link的名字，返回找到的Joint结构体和Link结构体
+  + 每一个Joint和它的 child link 合成一个segment
+
++ 思路：
+  + 将解析到的Joint和Link保存起来，
+  + 输入一个Joint的名字，返回这个Joint结构体和它的子Link结构体
