--- a/Grandhonor/Robot-协作机器人开发/arwen-doc/机械臂设计文档01.md
+++ b/Grandhonor/Robot-协作机器人开发/arwen-doc/机械臂设计文档01.md
@@ -69,6 +69,46 @@
 
 ### 1.2 demo_webserver.c 分析
 
+### 数据结构
+
+#### `ec_pdo_entry_info_t`
+
++ 简介：PDO条目配置信息。这是`ec_pdo_info_t`中的`entries`字段的数据类型
++ 声明：
+  ```
+    typedef struct {
+      uint16_t index;      /**< PDO entry index. */
+      uint8_t  subindex;   /**< PDO entry subindex. */
+      uint8_t  bit_length; /**< Size of the PDO entry in bit. */
+    } ec_pdo_entry_info_t;
+  ``` 
+
+#### `ec_pdo_info_t`
+
++ 简介：PDO配置信息。这是`ec_sync_info_t`中的`pdos`字段的数据类型
++ 声明：
+  ```
+    typedef struct {
+      uint16_t index;              /**< PDO index. */
+      unsigned int n_entries;      /**< 要映射的entries PDO条目数 (0表示使用默认映射，这只能在从服务器处于总线配置时完成)*/
+      ec_pdo_entry_info_t *entries;/**< 要映射的PDO项数组。可以是NULL，或者必须包含至少n_entries个值*/
+    } ec_pdo_info_t;
+  ``` 
+
+#### `ec_sync_info_t`
+
++ 简介：同步管理器配置信息。这可以用于配置多个同步管理器，包括PDO分配和PDO映射。它被作为`ecrt_slave_config_pdos()`函数的输入参数使用
++ 声明：
+  ```
+    typedef struct {
+      uint8_t index;  /**< 同步管理器索引。Sync manager index.Must be less than #EC_MAX_SYNC_MANAGERS for a valid sync manager,but can also be \a 0xff to mark the end of the list. */
+      ec_direction_t dir;  /**<同步管理器方向 */
+      unsigned int   n_pdos;  /**< PDOs在pdos结构体数组中的数量 */
+      ec_pdo_info_t  *pdos;  /**<带有要分配的pdo的数组。所包含的PDOs必须不少于n_pdos
+      ec_watchdog_mode_t watchdog_mode;  /**< 看门狗模式 */
+    } ec_sync_info_t;
+  ``` 
+
 + 包含的头文件：
   + `ecat/ecat_master.h`
   + `ecat/ecat_taike.h`
@@ -76,6 +116,7 @@
 + 使用到的类：
   + `Master ecatmaster;`
   + `EcatTaike ecat_taike;`
+
 
 ##  公式
 
