update __sync part

--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -110,6 +110,23 @@
     #endif
   ``` 
 
+### C++类的构造函数后加冒号
+
++ 例如：`Mat::Mat(const Mat &src):Mat();`
+
++ 单冒号的作用是：表示后面是初始化列表
++ 这样的写法一般有三种使用场景
+  + 对父类进行初始化。
+    + 目的：在创建子类对象时,能够把参数传给父类,从而先完成对父类的初始化.子类构造函数必须要调用父类的构造函数（无论显式还是隐式）
+    + 调用格式：**`子类构造函数 : 父类构造函数`**
+  + 对类成员进行初始化
+    + 调用格式:`构造函数 : A(初始值),B(初始值),C(初始值)……`
+  + 对类的const成员变量进行初始化
+    + 由于const成员变量的值无法在构造函数内部初始化，因此只能在变量定义时赋值或使用初始化列表赋值
++ 对于2、3中的应用场景，有以下两点说明
+  + 构造函数列表初始化执行顺序与成员变量在类中声明顺序相同，与初始化列表中语句书写先后无关
+  + 相对于在构造函数中赋值，初始化列表执行效率更高。
+
 ### C++函数后面加一个冒号的含义
 
 + 冒号后面跟的是赋值，这种写法是C++的特性
