add __sync_fetch_and_add functions

--- a/CPP/C-C++02_常用函数.md
+++ b/CPP/C-C++02_常用函数.md
@@ -1,3 +1,23 @@
+## __sync_fetch_and_add()
+
++ 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`相加并将结果存入到`*ptr`
++ 声明：`type __sync_fetch_and_add (type *ptr, type value, ...)`
+
+## __sync_fetch_and_sub()
+
++ 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`相减并将结果存入到`*ptr`
++ 声明：`type __sync_fetch_and_sub (type *ptr, type value, ...)`
+
+## __sync_fetch_and_or()
+
++ 简述：先返回没有操作的`*ptr`，然后将`*ptr`与`value`做按位或运算，并将结果存入到`*ptr`
++ 声明：`type __sync_fetch_and_or (type *ptr, type value, ...)`
+
+## __sync_and_and_fetch()
+
++ 简述：先将`*ptr`与`val`做按位与运算，返回操作之后的值
++ 声明：`type __sync_add_and_fetch (type *ptr, type value, ...)`
+
 ## __sync_bool_compare_and_swap(), __sync_val_compare_and_swap()
 
 + 简述：这两个函数提供原子的比较和交换，如果`*ptr`与`oldval`相等，就将`newval`写入到`*ptr`
