--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -1332,11 +1332,11 @@
 
 ### 访问控制和继承
 
-|  访问   | public | protected | private |
-| -----  |  ----  |  -------  | ------- |
-| 同一个类 | yes   |    yes    |    ye   |
+|  访问    | public | protected | private |
+| -----   |  ----  |  -------  | ------- |
+| 同一个类 | yes   |    yes    |    yes   |
 | 派生类   | yes   |    yes    |     no  |
-|外部的类  |  yes   |    no    |     no   |
+| 外部的类  |  yes   |    no    |     no   |
 
 + 一个派生类继承了所有的基类方法，但是下列情况除外：
   - 基类的构造函数，析构函数和拷贝构造函数
@@ -1345,7 +1345,7 @@
 
 + 继承类型：
   - **公有继承(public)**：当一个类派生自公有基类时，基类的公有成员也是派生类的公有成员，基类的保护成员也是派生类的保护成员，基类的私有成员不能直接被派生类访问，但是可以通过调用基类的公有和保护成员来访问。
-  - **保护继承(protected)**：当一个类派生自保护基类时，基类的公有和保护成员将成为派生类的**保护成员。**
+  - **保护继承(protected)**：当一个类派生自保护基类时，基类的公有和保护成员将成为派生类的**保护成员**。
   - **私有继承(private)**：当一个类派生自私有基类时，基类的公有和保护成员将称为派生类的**私有成员**。
 
 ### C++类成员的三种访问权限
