--- a/CPP/C-C++01_语言基础.md
+++ b/CPP/C-C++01_语言基础.md
@@ -1,3 +1,8 @@
+## C++中的科学计数法
+
++ C++中，也可以使用科学计数法，例如：
+  + `double a = 1e3;  // a = 1000.0;`
+
 ## char类型
 
 + `char`类型用于存储字符，例如字符或标点符号。但是从技术层面看，`char`是整数类型。
