--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,120 @@
 ## 概述 -- 理论基础知识
 
+## 智能指针与内存管理
+
+### RAII与引用计数
+
++ 引用计数这种计数是为了防止内存泄露而产生的。 基本想法是对于动态分配的对象，进行引用计数，每当增加一次对同一个对象的引用，那么引用对象的引用计数就会增加一次， 每删除一次引用，引用计数就会减一，当一个对象的引用计数减为零时，就自动删除指向的堆内存。
++ 在传统 C++ 中，『记得』手动释放资源，总不是最佳实践。因为我们很有可能就忘记了去释放资源而导致泄露。 所以通常的做法是对于一个对象而言，我们在构造函数的时候申请空间，而在析构函数（在离开作用域时调用）的时候释放空间， 也就是我们常说的 **RAII 资源获取即初始化技术**
++ 凡事都有例外，我们总会有需要将对象在自由存储上分配的需求，在传统 C++ 里我们只好使用 new 和 delete 去 『记得』对资源进行释放。而 C++11 引入了智能指针的概念，使用了引用计数的想法，让程序员不再需要关心手动释放内存。 这些智能指针包括 `std::shared_ptr/std::unique_ptr/std::weak_ptr`，使用它们需要包含头文件 `<memory>`
++ 注意：引用计数不是垃圾回收，引用计数能够尽快收回不再被使用的对象，同时在回收的过程中也不会造成长时间的等待， 更能够清晰明确的表明资源的生命周期。
+
+### std::shared_ptr
+
++ `std::shared_ptr` 是一种智能指针，它能够记录多少个 shared_ptr 共同指向一个对象，从而消除显式的调用 delete，当引用计数变为零的时候就会将对象自动删除。但还不够，因为使用 `std::shared_ptr` 仍然需要使用 new 来调用，这使得代码出现了某种程度上的不对称。
++ `std::make_shared` 就能够用来消除显式的使用 new，所以 `std::make_shared` 会分配创建传入参数中的对象， 并返回这个对象类型的 `std::shared_ptr` 指针
++ 例如：
+  ```
+    #include <iostream>
+    #include <memory>
+    void foo(std::shared_ptr<int> i) {
+        (*i)++;
+    }
+    int main() {
+        // auto pointer = new int(10); // illegal, no direct assignment
+        // Constructed a std::shared_ptr
+        auto pointer = std::make_shared<int>(10);
+        foo(pointer);
+        std::cout << *pointer << std::endl; // 11
+        // The shared_ptr will be destructed before leaving the scope
+        return 0;
+    }
+  ``` 
+
++ `std::shared_ptr` 可以通过 `get()` 方法来获取原始指针，通过 `reset()` 来减少一个引用计数， 并通过 `use_count()` 来查看一个对象的引用计数
+
+### std::unique_str
+
++ `std::unique_ptr` 是一种独占的智能指针，它禁止其他智能指针与其共享同一个对象，从而保证代码的安全：
+  ```
+    std::unique_ptr<int> pointer = std::make_unique<int>(10); // make_unique 从 C++14 引入
+    std::unique_ptr<int> pointer2 = pointer; // 非法
+  ``` 
++ make_unique 并不复杂，C++11 没有提供 std::make_unique，可以自行实现：
+  ```
+    template<typename T, typename ...Args>
+    std::unique_ptr<T> make_unique( Args&& ...args ) {
+      return std::unique_ptr<T>( new T( std::forward<Args>(args)... ) );
+    }
+  ``` 
+
++ 既然是独占，换句话说就是不可复制。但是，我们可以利用 `std::move` 将其转移给其他的 `unique_ptr`
++ 例如：
+  ```
+    #include <iostream>
+    #include <memory>
+
+    struct Foo {
+        Foo() { std::cout << "Foo::Foo" << std::endl; }
+        ~Foo() { std::cout << "Foo::~Foo" << std::endl; }
+        void foo() { std::cout << "Foo::foo" << std::endl; }
+    };
+
+    void f(const Foo &) {
+        std::cout << "f(const Foo&)" << std::endl;
+    }
+
+    int main() {
+        std::unique_ptr<Foo> p1(std::make_unique<Foo>());
+        // p1 不空, 输出
+        if (p1) p1->foo();
+        {
+            std::unique_ptr<Foo> p2(std::move(p1));
+            // p2 不空, 输出
+            f(*p2);
+            // p2 不空, 输出
+            if(p2) p2->foo();
+            // p1 为空, 无输出
+            if(p1) p1->foo();
+            p1 = std::move(p2);
+            // p2 为空, 无输出
+            if(p2) p2->foo();
+            std::cout << "p2 被销毁" << std::endl;
+        }
+        // p1 不空, 输出
+        if (p1) p1->foo();
+        // Foo 的实例会在离开作用域时被销毁
+    }
+  ``` 
+
+### std::weak_ptr
+
++ 如果你仔细思考 `std::shared_ptr` 就会发现依然存在着资源无法释放的问题。看下面这个例子：
+  ```
+    struct A;
+    struct B;
+
+    struct A {
+        std::shared_ptr<B> pointer;
+        ~A() {
+            std::cout << "A 被销毁" << std::endl;
+        }
+    };
+    struct B {
+        std::shared_ptr<A> pointer;
+        ~B() {
+            std::cout << "B 被销毁" << std::endl;
+        }
+    };
+    int main() {
+        auto a = std::make_shared<A>();
+        auto b = std::make_shared<B>();
+        a->pointer = b;
+        b->pointer = a;
+    }
+  ```
++ 运行结果是 A, B 都不会被销毁，这是因为 a,b 内部的 pointer 同时又引用了 a,b，这使得 a,b 的引用计数均变为了 2，而离开作用域时，a,b 智能指针被析构，却只能造成这块区域的引用计数减一，这样就导致了 a,b 对象指向的内存区域引用计数不为零，而外部已经没有办法找到这块区域了，也就造成了内存泄露
+
 ## __sync_fetch_and_add系列
 
 + 作用：提供**多线程下变量的加减和逻辑运算的原子操作**
