--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,159 @@
 ## 概述 -- 理论基础知识
 
+## C/C++ 位域知识小结
+
++ C/C++中以一定区域内的位(bit)为单位来表示的数据称为位域，位域必须指明具体的数目
++ 位域的作用主要是节省内存资源，使数据结构更紧凑。
+
++ 一个位域必须存储在同一个字节中，不能跨两个字节，故位域的长度不能大于一个字节的长度
++ 如一个字节所剩空间不够存放另一位域时，应从下一单元起存放该位域。也可以有意使某位域从下一单元开始。例如：
+  ```
+    struct BitField {
+      unsigned int a:4;  //占用4个二进制位;
+      unsigned int  :0;  //空位域,自动置0;
+      unsigned int b:4;  //占用4个二进制位,从下一个存储单元开始存放;
+      unsigned int c:4;  //占用4个二进制位;
+      unsigned int d:5;  //占用5个二进制位,剩余的4个bit不够存储4个bit的数据,从下一个存储单元开始存放;
+      unsigned int  :0;  //空位域,自动置0;
+      unsigned int e:4;  //占用4个二进制位,从这个存储单元开始存放;
+    };
+  ``` 
+
++ 取地址操作符&不能应用在位域字段上;
+
++ 位域字段不能是类的静态成员;
+
++ 位域字段在内存中的位置是按照从低位向高位的顺序放置的;
+  ```
+    struct BitField {
+      unsigned char a:2;  //最低位;
+      unsigned char b:3;
+      unsigned char c:3;  //最高位;
+    };
+    union Union {
+      struct BitField bf;
+      unsigned int n;
+    };
+    union Union ubf;
+    ubf.n = 0;    //初始化;
+    ubf.bf.a = 0; //二进制为: 000
+    ubf.bf.b = 0; //二进制为: 000
+    ubf.bf.c = 1; //二进制为: 001
+    printf("ubf.bf.n = %u\n", ubf.n);
+  ``` 
++ 位域中的位域字段按照从低位向高位顺序方式的顺序来看,那么,a、b、c这三个位域字段在内存中的放置情况是:
+  + 最高位是c:001
+  + 中间位是b:000
+  + 最低位是a:000;
++ 所以,这个位域结构中的8二进制内容就是: 00100000,总共8个位,其十进制格式就是32;实际上打印出来的ubf.n值就是32;
+  ```
+    ubf.n = 100; //二进制为: 01100100
+
+    printf("ubf.bf.a = %d, ubf.bf.b = %d, ubf.bf.c = %d\n", ubf.bf.a, ubf.bf.b, ubf.bf.c);
+  ``` 
++ 此时,对于位域ubf.bf来说,其位于字段仍然按照从低位向高位顺序方式的顺序放置,则,
+  + 最高位是c:011,
+  + 中间位是b:001,
+  + 最低位是a:00;
++ 所以,ubf.bf.a = 0; ubf.bf.b = 1; ubf.bf.c = 3;实际上打印出来的结果也的确如此;不够存储下一个位域的4位,故设为空位域,不使用,自动置0;e从第四个字节处开始存放,占用4位;
+
++ 位域的对齐
+  + 如果相邻位域字段的类型相同，且其位宽之和小于类型的sizeof大小，则后面的字段将紧邻前一个字段存储，直到不能容纳为止；
+  + 如果相邻位域字段的类型相同，但其位宽之和大于类型的sizeof大小，则后面的字段将从新的存储单元开始，其偏移量为其类型大小的整数倍；
+  + 如果相邻的两个位域字段的类型不同,则各个编译器的具体实现有差异,VC6采取不压缩方式,GCC和Dev-C++都采用压缩方式;
+  + 整个结构体的总大小为最宽基本类型成员大小的整数倍
+  + 如果位域字段之间穿插着非位域字段，则不进行压缩；（不针对所有的编译器）
+  ```
+    struct BFA {
+      unsigned char a:2;
+      unsigned char b:3;
+      unsigned char c:3;
+    };
+    struct BFB {
+      unsigned char a:2;
+      unsigned char b:3;
+      unsigned char c:3;
+      unsigned int  d:4;  //多出来这个位域字段;
+    };
+  ``` 
++ `sizeof(BFA)=1, sizeof(BFB)=8;`
++ 这也说明了第三点中"相邻两个位于字段类型不相同时,VC6采取不压缩的方式"
+
++ 当要把某个成员说明成位域时,其类型只能是int,unsigned int与signed int三者之一(说明:int类型通常代表特定机器中整数的自然长度。short类型通常为16位,long类型通常为32位,int类型可以为16位或32位.各编译器可以根据硬件特性自主选择合适的类型长度.见The C Programming Language中文 P32)
++ 尽管使用位域可以节省内存空间,但却增加了处理时间,在为当访问各个位域成员时需要把位域从它所在的字中分解出来或反过来把一值压缩存到位域所在的字位中.
+
+## 类中的静态变量和静态函数
+
+### 1.1 详解
+
++ 示例：
+  ```
+    #include <iostream>
+
+    using namespace std;
+
+    class Test
+    {
+    public:
+        Test() : y(1), r(y), d(3){} //对于常量型成员变量和引用型成员变量，必须通过参数化列表的方式进行初始化。
+        ~Test(){}
+
+        int y;      //普通变量成员
+        int &r;     //引用成员变量
+        const int d;    //常量成员变量
+        static int c;   //静态成员变量
+        static const int x = 2.1;   //静态常量整型成员变量
+        static const int xx;        //静态常量整型成员变量声明
+        static const double z;  //静态常量非整型成员变量声明
+        static const float zz = 6.6;    //静态常量非整型成员变量
+    };
+
+
+    const int Test::xx = 4; //静态常量整型成员变量定义
+    const double Test::z = 5.1; ////静态常量非整型成员变量定义
+    int Test::c = 2;
+
+    int main(void)
+    {
+        cout << Test::x << endl;    
+
+        return 0;
+    }
+  ```
++ 这些特殊类型的成员变量主要有：
+  + 引用
+  + 常量
+  + 静态变量
+  + 静态整型常量
+  + 静态非整型常量
+
++ 对于引用和常量，成员变量必须通过构造函数的参数列表的方式初始化。上述程序中的r 和 d 变量的初始化
++ 对于静态变量，static成员变量需要在类定义体外进行初始化与定义，因为static数据成员独立该类的任意对象存在，它是类关联的对象，不与类对象关联。例如：上述程序中的C变量的初始化
++ 对于静态整型常量，该类型成员可以直接在类中初始化，也可以在类中声明，在类定义体外进行定义。例如：上述程序中的x和xx变量。
++ 对于静态非整型常量，该类型也是可以在类中声明，在类定义体外进行定义，或者直接在类中定义并初始化。例如：上述程序中的z和zz变量。
+
+### 1.2 结论
+
++ static成员的优点
+  + static成员的名字是在类的作用域中，因此可以避免与其它类成员或全局对象名字冲突。
+  + 可以实施封装，static成员可以是私有的，而全局对象不可以。
+  + 阅读程序容易看出static成员与某个类相关联，这种可见性可以清晰地反映程序员的意图。
+
++ static成员函数特点
+  + 因为static成员函数没有this指针，所以静态成员函数不可以访问非静态成员。
+  + 非静态成员函数可以访问静态成员。
+  + 静态数据成员与类的大小无关，因为静态成员只是作用在类的范围而已。
+
+### 1.3 static用法总结
+
++ c语言中：
+  + 用于函数内部修饰变量，即函数内的静态变量。这种变量的生存期长于该函数，使得函数具有一定的“状态”。使用静态变量的函数一般是不可重入的，也不是线程安全的，比如strtok(3)。
+  + 用在文件级别（函数体之外），修饰变量或函数，表示该变量或函数只在本文件可见，其他文件看不到也访问不到该变量或函数。专业的说法叫“具有internal linkage”（简言之：不暴露给别的translation unit）
+
++ c++语言中（由于C++引入了类，在保持与C语言兼容的同时，static关键字又有了两种新用法）：
+  + 用于修饰类的数据成员，即所谓“静态成员”。这种数据成员的生存期大于class的对象（实例/instance）。静态数据成员是每个class有一份，普通数据成员是每个instance 有一份。
+  + 用于修饰class的成员函数，即所谓“静态成员函数”。这种成员函数只能访问静态成员和其他静态成员函数，不能访问非静态成员和非静态成员函数。
+
 ## 智能指针与内存管理
 
 ### RAII与引用计数
