Grandhonor/Robot文档由Notes仓库转移到COB组下面的documents仓库,用作协作机器人项目共同维护的开发文档

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -1,5 +1,11 @@
 ## 概述 -- 理论基础知识
 
+## C/C++中浮点数的格式化
+
++ 处理原则：
+  + 无论何时需要格式化一个数值，都应该先转为一个字符串，这样可以保证每一位数刚好可以占据一个字符
+  + 在需要转换为字符串时，请使用库
+
 ## C/C++ 位域知识小结
 
 + C/C++中以一定区域内的位(bit)为单位来表示的数据称为位域，位域必须指明具体的数目
