--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,43 @@
 ## C/C++ 常用编程技巧
 
+### 将float类型转为string类型
+
++ 方法一
+  ```
+    //c++ 将float 类型转换成string 类型:
+    #include<sstream>
+
+    std::string Convert(float Num)
+    {
+        std::ostringstream oss;
+        oss<<Num;
+        std::string str(oss.str());
+        return str;
+    }
+
+    int main(){
+        float num = 10.11;
+        std::string data = Convert(num);
+        printf("data:  %s\n", data.c_str());
+        return 0;
+    }
+  ```
+
++ 方法二：(C++11)
+  ```
+    //c++ 将float 类型转换成string 类型:
+    #include<sstream>
+
+    int main(){
+        float num = 10.11;
+
+        std::string data = std::to_string(num);
+        printf("data:  %s\n", data.c_str());
+
+        return 0;
+    }
+  ``` 
+
 ### 类中声明并初始化静态变量
 
 + 在类中，如果想要直接声明并且初始化一个静态成员，则这个静态变量必须是静态常量
