add sql-base which is about mysql

--- a/CPP/C-C++06_编程技巧.md
+++ b/CPP/C-C++06_编程技巧.md
@@ -1,5 +1,16 @@
 ## C/C++ 常用编程技巧
 
+### 函数参数设置默认值
+
++ 示例：
+  + `auto connect(const std::string &remote_ip = std::string(), const std::string &port = std::string())->void;`
++ 作用：
+  + 为函数`connect()`的两个参数`remote_ip`和`port`设置默认值，默认值是`std::string()`对象的引用，为空
+
++ 原理
+  + 在C++中，可以为函数的参数提供默认值，以便在调用函数时可以省略该参数。
+  + 要为函数的参数提供默认值，需要在声明函数时在该参数的类型后面放置一个等于号和默认值
+
 ### 将float类型转为string类型
 
 + 方法一
